fix: fix sonar lint problems